chore(engine): migrate JobUpdateRetriesTest