@@ -15,7 +15,7 @@
  * You should have received a copy of the GNU Affero General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-package io.zeebe.engine.job;
+package io.zeebe.engine.processor.workflow.job;
 
 import static io.zeebe.test.util.record.RecordingExporter.jobRecords;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -28,33 +28,37 @@ import io.zeebe.exporter.api.record.Record;
 import io.zeebe.exporter.api.record.RecordMetadata;
 import io.zeebe.exporter.api.record.value.JobBatchRecordValue;
 import io.zeebe.exporter.api.record.value.JobRecordValue;
-import io.zeebe.model.bpmn.Bpmn;
 import io.zeebe.msgpack.spec.MsgPackHelper;
 import io.zeebe.protocol.RecordType;
 import io.zeebe.protocol.RejectionType;
 import io.zeebe.protocol.impl.encoding.MsgPackConverter;
 import io.zeebe.protocol.intent.JobIntent;
 import io.zeebe.test.util.MsgPackUtil;
-import io.zeebe.test.util.record.RecordingExporter;
+import io.zeebe.test.util.Strings;
 import org.agrona.DirectBuffer;
 import org.agrona.concurrent.UnsafeBuffer;
-import org.junit.Rule;
+import org.junit.Before;
+import org.junit.ClassRule;
 import org.junit.Test;
 
 public class CompleteJobTest {
   private static final String JSON_VARIABLES = "{\"foo\":\"bar\"}";
   private static final byte[] VARIABLES_MSG_PACK = MsgPackUtil.asMsgPackReturnArray(JSON_VARIABLES);
-  private static final String JOB_TYPE = "foo";
   private static final String PROCESS_ID = "process";
+  private static String jobType;
 
-  @Rule public EngineRule engineRule = new EngineRule();
+  @ClassRule public static EngineRule engineRule = new EngineRule();
+
+  @Before
+  public void setup() {
+    jobType = Strings.newRandomValidBpmnId();
+  }
 
   @Test
   public void shouldCompleteJob() {
     // given
-    createJob(JOB_TYPE);
-    final Record<JobBatchRecordValue> batchRecord =
-        engineRule.jobs().withType(JOB_TYPE).activateAndWait();
+    engineRule.createJob(jobType, PROCESS_ID);
+    final Record<JobBatchRecordValue> batchRecord = engineRule.jobs().withType(jobType).activate();
     final JobRecordValue job = batchRecord.getValue().getJobs().get(0);
 
     // when
@@ -62,7 +66,7 @@ public class CompleteJobTest {
         engineRule
             .job()
             .withVariables(MsgPackConstants.MSGPACK_VARIABLES)
-            .completeAndWait(batchRecord.getValue().getJobKeys().get(0));
+            .complete(batchRecord.getValue().getJobKeys().get(0));
 
     // then
     final RecordMetadata metadata = jobCompletedRecord.getMetadata();
@@ -84,30 +88,29 @@ public class CompleteJobTest {
     final int key = 123;
 
     // when
-    engineRule.job().withVariables(MsgPackConstants.MSGPACK_VARIABLES).complete(key);
-    final Record<JobRecordValue> rejection =
-        RecordingExporter.jobRecords(JobIntent.COMPLETE)
-            .withRecordType(RecordType.COMMAND_REJECTION)
-            .getFirst();
+    final Record<JobRecordValue> jobRecord =
+        engineRule
+            .job()
+            .withVariables(MsgPackConstants.MSGPACK_VARIABLES)
+            .expectRejection()
+            .complete(key);
 
     // then
-    assertThat(rejection.getMetadata().getIntent()).isEqualTo(JobIntent.COMPLETE);
-    assertThat(rejection.getMetadata().getRejectionType()).isEqualTo(RejectionType.NOT_FOUND);
+    Assertions.assertThat(jobRecord.getMetadata()).hasRejectionType(RejectionType.NOT_FOUND);
   }
 
   @Test
   public void shouldCompleteJobWithVariables() {
     // given
-    createJob(JOB_TYPE);
-    final Record<JobBatchRecordValue> batchRecord =
-        engineRule.jobs().withType(JOB_TYPE).activateAndWait();
+    engineRule.createJob(jobType, PROCESS_ID);
+    final Record<JobBatchRecordValue> batchRecord = engineRule.jobs().withType(jobType).activate();
 
     // when
     final Record<JobRecordValue> completedRecord =
         engineRule
             .job()
             .withVariables(MsgPackConstants.MSGPACK_VARIABLES)
-            .completeAndWait(batchRecord.getValue().getJobKeys().get(0));
+            .complete(batchRecord.getValue().getJobKeys().get(0));
 
     // then
     Assertions.assertThat(completedRecord.getMetadata())
@@ -120,16 +123,15 @@ public class CompleteJobTest {
   @Test
   public void shouldCompleteJobWithNilVariables() {
     // given
-    createJob(JOB_TYPE);
-    final Record<JobBatchRecordValue> batchRecord =
-        engineRule.jobs().withType(JOB_TYPE).activateAndWait();
+    engineRule.createJob(jobType, PROCESS_ID);
+    final Record<JobBatchRecordValue> batchRecord = engineRule.jobs().withType(jobType).activate();
 
     // when
     final Record<JobRecordValue> completedRecord =
         engineRule
             .job()
             .withVariables(new UnsafeBuffer(MsgPackHelper.NIL))
-            .completeAndWait(batchRecord.getValue().getJobKeys().get(0));
+            .complete(batchRecord.getValue().getJobKeys().get(0));
 
     // then
     Assertions.assertThat(completedRecord.getMetadata())
@@ -142,16 +144,15 @@ public class CompleteJobTest {
   @Test
   public void shouldCompleteJobWithZeroLengthVariables() {
     // given
-    createJob(JOB_TYPE);
-    final Record<JobBatchRecordValue> batchRecord =
-        engineRule.jobs().withType(JOB_TYPE).activateAndWait();
+    engineRule.createJob(jobType, PROCESS_ID);
+    final Record<JobBatchRecordValue> batchRecord = engineRule.jobs().withType(jobType).activate();
 
     // when
     final Record<JobRecordValue> completedRecord =
         engineRule
             .job()
             .withVariables(new UnsafeBuffer(new byte[0]))
-            .completeAndWait(batchRecord.getValue().getJobKeys().get(0));
+            .complete(batchRecord.getValue().getJobKeys().get(0));
 
     // then
     Assertions.assertThat(completedRecord.getMetadata())
@@ -164,15 +165,15 @@ public class CompleteJobTest {
   @Test
   public void shouldCompleteJobWithNoVariables() {
     // given
-    createJob(JOB_TYPE);
-    final Record<JobBatchRecordValue> batchRecord =
-        engineRule.jobs().withType(JOB_TYPE).activateAndWait();
-    final Record<JobRecordValue> activated = jobRecords(JobIntent.ACTIVATED).getFirst();
+    final Record<JobRecordValue> job = engineRule.createJob(jobType, PROCESS_ID);
+    final Record<JobBatchRecordValue> batchRecord = engineRule.jobs().withType(jobType).activate();
+    final Record<JobRecordValue> activated =
+        jobRecords(JobIntent.ACTIVATED).withRecordKey(job.getKey()).getFirst();
 
     // when
     final DirectBuffer variables = MsgPackUtil.asMsgPack(activated.getValue().getVariables());
     final Record<JobRecordValue> completedRecord =
-        engineRule.job().withVariables(variables).completeAndWait(activated.getKey());
+        engineRule.job().withVariables(variables).complete(activated.getKey());
 
     // then
     Assertions.assertThat(completedRecord.getMetadata())
@@ -185,9 +186,8 @@ public class CompleteJobTest {
   @Test
   public void shouldThrowExceptionOnCompletionIfVariablesAreInvalid() {
     // given
-    createJob(JOB_TYPE);
-    final Record<JobBatchRecordValue> batchRecord =
-        engineRule.jobs().withType(JOB_TYPE).activateAndWait();
+    engineRule.createJob(jobType, PROCESS_ID);
+    final Record<JobBatchRecordValue> batchRecord = engineRule.jobs().withType(jobType).activate();
 
     final byte[] invalidVariables = new byte[] {1}; // positive fixnum, i.e. no object
 
@@ -198,6 +198,7 @@ public class CompleteJobTest {
                 engineRule
                     .job()
                     .withVariables(new UnsafeBuffer(invalidVariables))
+                    .expectRejection()
                     .complete(batchRecord.getValue().getJobKeys().get(0)));
 
     // then
@@ -210,9 +211,8 @@ public class CompleteJobTest {
   @Test
   public void shouldRejectCompletionIfJobIsCompleted() {
     // given
-    createJob(JOB_TYPE);
-    final Record<JobBatchRecordValue> batchRecord =
-        engineRule.jobs().withType(JOB_TYPE).activateAndWait();
+    engineRule.createJob(jobType, PROCESS_ID);
+    final Record<JobBatchRecordValue> batchRecord = engineRule.jobs().withType(jobType).activate();
 
     final DirectBuffer variables =
         MsgPackUtil.asMsgPack(batchRecord.getValue().getJobs().get(0).getVariables());
@@ -220,56 +220,32 @@ public class CompleteJobTest {
     engineRule.job().withVariables(variables).complete(jobKey);
 
     // when
-    engineRule.job().withVariables(variables).complete(jobKey);
-    final Record<JobRecordValue> rejection =
-        RecordingExporter.jobRecords(JobIntent.COMPLETE)
-            .withRecordType(RecordType.COMMAND_REJECTION)
-            .getFirst();
+    final Record<JobRecordValue> jobRecord =
+        engineRule.job().withVariables(variables).expectRejection().complete(jobKey);
 
     // then
-    Assertions.assertThat(rejection.getMetadata())
-        .hasRejectionType(RejectionType.NOT_FOUND)
-        .hasIntent(JobIntent.COMPLETE);
+    Assertions.assertThat(jobRecord.getMetadata()).hasRejectionType(RejectionType.NOT_FOUND);
   }
 
   @Test
   public void shouldRejectCompletionIfJobIsFailed() {
     // given
-    createJob(JOB_TYPE);
+    engineRule.createJob(jobType, PROCESS_ID);
 
     // when
-    final Record<JobBatchRecordValue> batchRecord =
-        engineRule.jobs().withType(JOB_TYPE).activateAndWait();
+    final Record<JobBatchRecordValue> batchRecord = engineRule.jobs().withType(jobType).activate();
     final Long jobKey = batchRecord.getValue().getJobKeys().get(0);
     engineRule.job().fail(jobKey);
 
-    engineRule
-        .job()
-        .withVariables(
-            MsgPackUtil.asMsgPack(batchRecord.getValue().getJobs().get(0).getVariables()))
-        .complete(jobKey);
-    final Record<JobRecordValue> rejection =
-        jobRecords(JobIntent.COMPLETE).withRecordType(RecordType.COMMAND_REJECTION).getFirst();
+    final Record<JobRecordValue> jobRecord =
+        engineRule
+            .job()
+            .withVariables(
+                MsgPackUtil.asMsgPack(batchRecord.getValue().getJobs().get(0).getVariables()))
+            .expectRejection()
+            .complete(jobKey);
 
     // then
-    Assertions.assertThat(rejection.getMetadata())
-        .hasRejectionType(RejectionType.INVALID_STATE)
-        .hasIntent(JobIntent.COMPLETE);
-  }
-
-  private Record<JobRecordValue> createJob(final String type) {
-    engineRule.deploy(
-        Bpmn.createExecutableProcess(PROCESS_ID)
-            .startEvent("start")
-            .serviceTask("task", b -> b.zeebeTaskType(type).done())
-            .endEvent("end")
-            .done());
-
-    final long instanceKey = engineRule.createWorkflowInstance(r -> r.setBpmnProcessId(PROCESS_ID));
-
-    return jobRecords(JobIntent.CREATED)
-        .withType(type)
-        .filter(r -> r.getValue().getHeaders().getWorkflowInstanceKey() == instanceKey)
-        .getFirst();
+    Assertions.assertThat(jobRecord.getMetadata()).hasRejectionType(RejectionType.INVALID_STATE);
   }
 }
